# ansible-role-restic

./: .ansible-lint  .gitignore  .yamllint.yml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
