[project]
name = "ansible-role-restic"
version = "1.0.0"
description = "Ansible role for Restic backup system"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "molecule>=6.0.0",
    "molecule-plugins[docker]>=23.5.0",
    "ansible>=8.0.0",
    "ansible-lint>=6.0.0",
    "yamllint>=1.32.0",
    "pytest-testinfra>=10.0.0",
]

[tool.ansible-lint]
profile = "production"
exclude_paths = [
    ".cache/",
    ".github/",
    ".venv/",
    "molecule/",
]

